@@ -1,8 +1,8 @@
 # vim: set ft=bash ts=3 sw=3 expandtab:
-# Update the changelog and tag a specific version of the code
+# Update the changelog, tag a specific version of the code, and push the changes
 
 command_tagrelease() {
-   local VERSION EARLIEST_YEAR LATEST_YEAR DEFAULT_BRANCH CURRENT_BRANCH COPYRIGHT DATE TAG FILES MESSAGE
+   local VERSION DATE TAG FILES MESSAGE
 
    if [ $# != 1 ]; then
       echo "tagrelease <version>"
@@ -10,14 +10,14 @@ command_tagrelease() {
    fi
 
    VERSION=$(echo "$1" | sed 's/^v//') # so you can use "0.1.5 or "v0.1.5"
-   EARLIEST_YEAR=$(git log --pretty="%ci" $(git rev-list --max-parents=0 HEAD) | sed 's/-.*$//g')
-   LATEST_YEAR=$(git log -1 --pretty="%ci" | sed 's/-.*$//g')
-   DEFAULT_BRANCH=$(git config --get init.defaultBranch)  # works on git > 2.28.0 from 2020
-   CURRENT_BRANCH=$(git branch -a | grep '^\*' | sed 's/^\* //')
    DATE=$(date +'%d %b %Y')
    TAG="v$VERSION" # follow PEP 440 naming convention
-   FILES="NOTICE pyproject.toml Changelog"
-   MESSAGE="Release v$VERSION to PyPI"
+   FILES="NOTICE Changelog"
+   MESSAGE="Release v$VERSION"
+
+   # Use $COPYRIGHT_START to override the earliest year found, in case git doesn't contain all history
+   EARLIEST_YEAR=${COPYRIGHT_START:-$(git log --pretty="%ci" $(git rev-list --max-parents=0 HEAD) | sed 's/-.*$//g')}
+   LATEST_YEAR=$(git log -1 --pretty="%ci" | sed 's/-.*$//g')
 
    if [ "$EARLIEST_YEAR" == "$LATEST_YEAR" ]; then
       COPYRIGHT="${EARLIEST_YEAR}"
@@ -42,13 +42,6 @@ command_tagrelease() {
       exit 1
    fi
 
-   poetry version $VERSION
-   if [ $? != 0 ]; then
-      echo "*** Failed to update version"
-      exit 1
-   fi
-
-   run_command dos2unix pyproject.toml
    run_command sedreplace "s|^Version $VERSION[[:blank:]][[:blank:]]*unreleased|Version $VERSION     $DATE|g" Changelog
    run_command sedreplace "s|(^ *Copyright \(c\) *)([0-9,-]+)( *.*$)|\1$COPYRIGHT\3|" NOTICE
 
@@ -66,8 +59,14 @@ command_tagrelease() {
       exit 1
    fi
 
+   git push --follow-tags
+   if [ $? != 0 ]; then
+      echo "*** Push step failed"
+      exit 1
+   fi
+
    echo ""
-   echo "*** Version v$VERSION has been released and committed; you may publish now"
+   echo "*** Version v$VERSION has been tagged"
    echo ""
 }
 
